--- a/css/home.css
+++ b/css/home.css
@@ -2,17 +2,21 @@ ul
 {
 	list-style: none;
 }
-
+a
+{
+	text-decoration: none;
+	color:black;
+}
 /*~~~~~~~~~
 Header CSS
 ~~~~~~~~~~*/
 
 #logo
 {
-	margin: 0 auto;
-  	padding: 5px 0 0 0;
+	margin: 2.5% auto;
  	width: 100%;
  	text-align: center;
+
 }
 
 /*Header naviation*/
@@ -34,6 +38,10 @@ header nav ul
 	position: relative;
 }
 
+#selected
+{
+	opacity: 0.5;
+}
 
 /*~~~~~~~~~
 Header CSS
