--- a/style.css
+++ b/style.css
@@ -1,21 +1,53 @@
-html {
-  height: 100%;
+html
+{
+		background: #EFEAE1;
+			border-style:solid;
+	border-color: #EFEAE1;
+	border-top-color:blue;
 }
 
-header{
+body
+{
+	max-width: 940px;
 	width:100%;
-	max-width: 1000px;
-	position:relative;
-	margin-left: auto;
-    margin-right: auto;
+	margin:0 auto;
+
+
+}
+header
+{
+	max-width:940px;
+	width:100%;
+	text-align: center;
+}
+h1
+{
+	font-family: 'Lobster', cursive;
+	font-size: 7em;
+	margin-bottom: 0;
+}
+h2
+{
+	text-align: center;
+	/*font-family: 'Cabin', sans-serif;*/
+	font-family: 'Droid Sans', sans-serif;
+	margin-top: 2.5%;
+	font-size: 1.5em;
+}
+nav
+{
+	text-align: center;
 }
 
-.h1
+
+nav ul
 {
-	text-align: center;
-	font-size: 24px;
+	list-style: none;
+	margin:0;
+	padding:0;
 }
-.nav
+nav ul li
 {
-	text-align: center;
+	display: inline-block;
+	margin:0 2.5%;
 }
