--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html
 {
-		background: #EFEAE1;
-			border-style:solid;
+	background: #EFEAE1;
+	border-style:solid;
 	border-color: #EFEAE1;
 	border-top-color:blue;
 }
@@ -11,8 +11,6 @@ body
 	max-width: 940px;
 	width:100%;
 	margin:0 auto;
-
-
 }
 header
 {
@@ -22,17 +20,25 @@ header
 }
 h1
 {
-	font-family: 'Lobster', cursive;
+/*	font-family: 'Lobster', cursive;*/
 	font-size: 7em;
 	margin-bottom: 0;
+	font-family: 'Pacifico', cursive;
 }
 h2
 {
 	text-align: center;
 	/*font-family: 'Cabin', sans-serif;*/
-	font-family: 'Droid Sans', sans-serif;
+/*	font-family: 'Droid Sans', sans-serif;*/	
 	margin-top: 2.5%;
 	font-size: 1.5em;
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-bottom: 0;
+	font-family: 'Fira Sans', sans-serif;
+}
+header button 
+{
 }
 nav
 {
@@ -45,9 +51,26 @@ nav ul
 	list-style: none;
 	margin:0;
 	padding:0;
+	padding-top: 20px ;
 }
 nav ul li
 {
 	display: inline-block;
 	margin:0 2.5%;
+}
+
+.projectInfo{
+	max-width:500px;
+	width:100%;
+	left: 50%;
+	right:50%;
+	position: absolute;
+	text-align: center;
+}
+.projectInfo .photo
+{
+	float:left;
+}
+.projectInfo .info{
+	float: right;
 }
