--- a/style.css
+++ b/style.css
@@ -21,19 +21,40 @@ header
 h1
 {
 /*	font-family: 'Lobster', cursive;*/
-	font-size: 7em;
+	font-size: 9em;
 	margin-bottom: 0;
 	font-family: 'Pacifico', cursive;
+	padding-bottom: 0;
 }
 h2
 {
 	text-align: center;
 	/*font-family: 'Cabin', sans-serif;*/
 /*	font-family: 'Droid Sans', sans-serif;*/	
-	margin-top: 2.5%;
+	margin-top: 0%;
 	font-size: 1.5em;
 	padding-left: 10%;
 	padding-right: 10%;
+	padding-bottom: 0;
+	font-family: 'Fira Sans', sans-serif;
+
+}
+h3{
+	padding:0;
+	margin:0;
+	font-size: 1em;
+	font-weight: 700;
+	font-family: 'Fira Sans', sans-serif;
+}
+h4
+{
+		font-weight: 400;
+	text-align: center;
+	/*font-family: 'Cabin', sans-serif;*/
+/*	font-family: 'Droid Sans', sans-serif;*/	
+	margin:0;
+	padding:0;
+	font-size: 1em;
 	padding-bottom: 0;
 	font-family: 'Fira Sans', sans-serif;
 }
